--- a/annuaire/templates/base.html
+++ b/annuaire/templates/base.html
@@ -22,7 +22,7 @@
           <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
               <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                  <h1>PolyContacts</h1>
+                  <h1>{{ config["APP_NAME"] }}</h1>
               </a>
 
               <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
@@ -58,7 +58,7 @@
 
     <footer class="">
         <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <p class="col-md-4 mb-0 text-muted">&copy; 2022 - PolyContacts</p>
+            <p class="col-md-4 mb-0 text-muted">&copy; 2022 - {{ config["APP_NAME"] }}</p>
     
             <p class="col-md-4 mb-0 text-muted">Site créé par O. Braillon, R. Brocheton et V. Point</p>
         
