--- a/annuaire/templates/connexion.html
+++ b/annuaire/templates/connexion.html
@@ -6,7 +6,7 @@
     <div class="col-md-6 col-xs-12">
         <h2>Connexion</h2>
 
-        <form action="/connexion" method="POST" class="row g-2 mb-4">
+        <form action="/connexion/" method="POST" class="row g-2 mb-4">
             <div class="col-md-6 col-xs-12">
                 <label for="email">Adresse email :</label>
                 <input type="email" class="form-control"  name="email" id="email" placeholder="name@example.com">
