--- a/annuaire/templates/inscription.html
+++ b/annuaire/templates/inscription.html
@@ -7,7 +7,7 @@
     <div class="col-md-6 col-xs-12">
         <h2>Inscription</h2>
 
-        <form action="/inscription" method="POST" class="row g-2 mb-4">
+        <form action="/inscription/" method="POST" class="row g-2 mb-4">
             <div class="col-md-6 col-xs-12">
                 <label for="firstname">Prénom :</label>
                 <input type="text" class="form-control" name="firstname" id="firstname" placeholder="John">
