--- a/annuaire/templates/base.html
+++ b/annuaire/templates/base.html
@@ -48,6 +48,12 @@
                 {% endif %}
                 {% if auth > 0 %}
                 <li>
+                  <a href="/profile" class="nav-link text-white text-center">
+                      <i class="fas fa-user d-block mx-auto mb-1"></i>
+                    Mon profil
+                  </a>
+                </li>
+                <li>
                     <a href="/logout" class="nav-link text-white text-center">
                         <i class="fas fa-sign-out-alt d-block mx-auto mb-1"></i>
                       Déconnexion
